fixed footer overflow issue

--- a/static/css/uodash.css
+++ b/static/css/uodash.css
@@ -12,8 +12,8 @@ body {
     position: absolute;
     bottom: 0;
     width: 100%;
-    padding-top: 10px;
+    padding-top: 5px;
     /* Set the fixed height of the footer here */
-    height: 60px;
+    height: 40px;
     background-color: #f5f5f5;
 }
